--- a/views/bookings.html
+++ b/views/bookings.html
@@ -8,18 +8,18 @@
   <link rel="stylesheet" href="../style.css" />
 </head>
 
-<body class="h-[100vh] w-[100vw] bg-[url(./images/background.jpg)] bg-cover">
-  <header class="bg-background flex items-center justify-between w-full h-1/10">
+<body class="h-[100vh] w-[100vw] bg-cover">
+  <!-- HEADER COMMON TO ALL PAGE -->
+  <header class="min-h-10 bg-background flex items-center justify-between w-full h-1/10">
     <a href="../index.html">
-      <h1 id="logo" class="text-ticket-green font-extrabold text-3xl">
-        Tickethack
-      </h1>
+      <h1 id="logo" class="text-ticket-green ml-5 font-extrabold text-3xl">Tickethack</h1>
     </a>
-    <div>
-      <a class="mx-5" href="cart.html">Cart</a>
-      <a class="mx-5" href="bookings.html">Bookings</a>
+    <div class="align-middle">
+      <a class="mx-5" href="./cart.html">Cart</a>
+      <a class="mx-5" href="./bookings.html">Bookings</a>
     </div>
   </header>
+  <!-- MAIN CONTAINER -->
   <div class="flex flex-col items-center justify-center h-9/10 w-full bg-grey">
     <div class="w-2/3 h-4/9 flex-col justify-between bg-background text-center rounded-t-xl">
       <h2>My bookings</h2>
