--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-green-900: oklch(0.393 0.095 152.535);
-    --color-neutral-50: oklch(0.985 0 0);
-    --color-neutral-100: oklch(0.97 0 0);
     --spacing: 0.25rem;
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
@@ -187,9 +184,6 @@
   .col-span-2 {
     grid-column: span 2 / span 2;
   }
-  .col-span-3 {
-    grid-column: span 3 / span 3;
-  }
   .col-start-1 {
     grid-column-start: 1;
   }
@@ -201,9 +195,6 @@
   }
   .col-start-5 {
     grid-column-start: 5;
-  }
-  .col-start-6 {
-    grid-column-start: 6;
   }
   .m-2 {
     margin: calc(var(--spacing) * 2);
@@ -229,8 +220,14 @@
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
   }
+  .my-auto {
+    margin-block: auto;
+  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
+  }
+  .ml-5 {
+    margin-left: calc(var(--spacing) * 5);
   }
   .flex {
     display: flex;
@@ -241,14 +238,14 @@
   .inline-block {
     display: inline-block;
   }
-  .table {
-    display: table;
+  .aspect-square {
+    aspect-ratio: 1 / 1;
   }
-  .h-1 {
-    height: calc(var(--spacing) * 1);
+  .h-1\/2 {
+    height: calc(1/2 * 100%);
   }
-  .h-1\/3 {
-    height: calc(1/3 * 100%);
+  .h-1\/5 {
+    height: calc(1/5 * 100%);
   }
   .h-1\/9 {
     height: calc(1/9 * 100%);
@@ -256,38 +253,17 @@
   .h-1\/10 {
     height: calc(1/10 * 100%);
   }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
   .h-2\/3 {
     height: calc(2/3 * 100%);
-  }
-  .h-2\/5 {
-    height: calc(2/5 * 100%);
-  }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
   }
   .h-3\/10 {
     height: calc(3/10 * 100%);
   }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
-  }
   .h-4\/9 {
     height: calc(4/9 * 100%);
   }
-  .h-4\/99 {
-    height: calc(4/99 * 100%);
-  }
-  .h-7 {
-    height: calc(var(--spacing) * 7);
-  }
   .h-7\/10 {
     height: calc(7/10 * 100%);
-  }
-  .h-9 {
-    height: calc(var(--spacing) * 9);
   }
   .h-9\/10 {
     height: calc(9/10 * 100%);
@@ -304,6 +280,9 @@
   .max-h-10 {
     max-height: calc(var(--spacing) * 10);
   }
+  .max-h-\[30px\] {
+    max-height: 30px;
+  }
   .min-h-10 {
     min-height: calc(var(--spacing) * 10);
   }
@@ -313,41 +292,17 @@
   .min-h-\[150px\] {
     min-height: 150px;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/3 {
     width: calc(1/3 * 100%);
   }
   .w-1\/9 {
     width: calc(1/9 * 100%);
   }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
   .w-2\/3 {
     width: calc(2/3 * 100%);
   }
-  .w-8 {
-    width: calc(var(--spacing) * 8);
-  }
-  .w-8\/10 {
-    width: calc(8/10 * 100%);
-  }
-  .w-9 {
-    width: calc(var(--spacing) * 9);
-  }
-  .w-9\/10 {
-    width: calc(9/10 * 100%);
-  }
-  .w-17 {
-    width: calc(var(--spacing) * 17);
-  }
   .w-17\/20 {
     width: calc(17/20 * 100%);
-  }
-  .w-19 {
-    width: calc(var(--spacing) * 19);
   }
   .w-19\/20 {
     width: calc(19/20 * 100%);
@@ -357,12 +312,6 @@
   }
   .w-full {
     width: 100%;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -388,12 +337,6 @@
   .justify-evenly {
     justify-content: space-evenly;
   }
-  .justify-start {
-    justify-content: flex-start;
-  }
-  .self-end {
-    align-self: flex-end;
-  }
   .overflow-x-scroll {
     overflow-x: scroll;
   }
@@ -407,13 +350,13 @@
     border-top-left-radius: var(--radius-xl);
     border-top-right-radius: var(--radius-xl);
   }
+  .rounded-l {
+    border-top-left-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
   .rounded-b-xl {
     border-bottom-right-radius: var(--radius-xl);
     border-bottom-left-radius: var(--radius-xl);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-0 {
     border-style: var(--tw-border-style);
@@ -431,9 +374,6 @@
   .bg-grey {
     background-color: var(--color-grey);
   }
-  .bg-neutral-100 {
-    background-color: var(--color-neutral-100);
-  }
   .bg-ticket-green {
     background-color: var(--color-ticket-green);
   }
@@ -446,14 +386,23 @@
   .bg-center {
     background-position: center;
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
   .text-center {
     text-align: center;
   }
+  .text-left {
+    text-align: left;
+  }
   .text-right {
     text-align: right;
+  }
+  .align-middle {
+    vertical-align: middle;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -470,21 +419,8 @@
   .text-background {
     color: var(--color-background);
   }
-  .text-green-900 {
-    color: var(--color-green-900);
-  }
-  .text-neutral-50 {
-    color: var(--color-neutral-50);
-  }
   .text-ticket-green {
     color: var(--color-ticket-green);
-  }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
 }
 .invalid-input {
@@ -504,9 +440,4 @@
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
-}
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
 }
