--- a/views/cart.html
+++ b/views/cart.html
@@ -8,24 +8,27 @@
   <link rel="stylesheet" href="../style.css" />
 </head>
 
-<body class="h-[100vh] w-[100vw] bg-[url(./images/background.jpg)] bg-cover">
-  <header class="bg-background flex items-center justify-between w-full h-1/10">
+<body class="h-[100vh] w-[100vw] bg-cover">
+  <!-- HEADER COMMON TO ALL PAGE -->
+  <header class="min-h-10 bg-background flex items-center justify-between w-full h-1/10">
     <a href="../index.html">
-      <h1 id="logo" class="text-ticket-green font-extrabold text-3xl">
-        Tickethack
-      </h1>
+      <h1 id="logo" class="text-ticket-green ml-5 font-extrabold text-3xl">Tickethack</h1>
     </a>
-    <div>
-      <a class="mx-5" href="cart.html">Cart</a>
-      <a class="mx-5" href="bookings.html">Bookings</a>
+    <div class="align-middle">
+      <a class="mx-5" href="./cart.html">Cart</a>
+      <a class="mx-5" href="./bookings.html">Bookings</a>
     </div>
   </header>
+  <!-- MAIN CONTAINER -->
   <div class="flex flex-col items-center justify-center h-9/10 w-full bg-grey">
-    <div class="w-2/3 h-1/3 bg-background text-center rounded-t-xl">
+    <div class="w-2/3 h-1/2 bg-background text-center rounded-t-xl">
       <h2>My cart</h2>
-      <div class="flex flex-col justify-center items-center" id="cart"></div>
+      <div class="flex flex-col overflow-x-scroll h-full justify-center items-center" id="cart">
+        <!-- TEMPLATE INSERTION HERE -->
+      </div>
     </div>
-    <div class="w-2/3 h-1/9 bg-blue relative bottom-0 rounded-b-xl flex justify-between items-center">
+    <!-- BOX FOOTER -->
+    <div class="w-2/3 h-1/9 min-h-10 bg-blue relative bottom-0 rounded-b-xl flex justify-between items-center">
       <div class="mx-5 text-background">
         Total : <span id="cart-total"></span>€
       </div>
@@ -34,13 +37,13 @@
   </div>
   <!-- TEMPLATE -->
   <template id="cart-tmpl">
-    <div class="w-19/20 h-1/9 grid grid-cols-5 bg-deep-grey rounded-xl">
-      <div class="col-start-1 col-span-2">
+    <div class="w-19/20 h-1/5 min-h-10: m-2 grid grid-cols-5 bg-deep-grey rounded-xs ">
+      <div class="h-full align-middle col-start-1 col-span-2">
         <span id="departure"></span>><span id="arrival"></span>
       </div>
-      <div class="col-start-3 text-center" id="time"></div>
-      <div class="col-start-4 text-center"><span id="price"></span>€</div>
-      <div class="col-start-5 text-right">
+      <div class="h-full align-middle col-start-3 text-center" id="time"></div>
+      <div class="h-full align-middle col-start-4 text-center"><span id="price"></span>€</div>
+      <div class="h-full align-middle col-start-5 text-right">
         <button id="delete" class="green-button m-2">X</button>
       </div>
     </div>
