lil' bit of style and add cart Total

--- a/views/bookings.html
+++ b/views/bookings.html
@@ -34,7 +34,7 @@
   </div>
   <!-- TEMPLATE -->
   <template id="booking-tmpl">
-    <div class="w-19/20 h-1/9 grid grid-cols-6 bg-deep-grey rounded-xl">
+    <div class="trip-box grid grid-cols-6 bg-deep-grey rounded-xl">
       <div class="col-start-1 col-span-2 text-left">
         <span id="departure"></span>><span id="arrival"></span>
       </div>
