--- a/style.css
+++ b/style.css
@@ -244,9 +244,6 @@
   .h-1\/2 {
     height: calc(1/2 * 100%);
   }
-  .h-1\/5 {
-    height: calc(1/5 * 100%);
-  }
   .h-1\/9 {
     height: calc(1/9 * 100%);
   }
@@ -350,10 +347,6 @@
     border-top-left-radius: var(--radius-xl);
     border-top-right-radius: var(--radius-xl);
   }
-  .rounded-l {
-    border-top-left-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
-  }
   .rounded-b-xl {
     border-bottom-right-radius: var(--radius-xl);
     border-bottom-left-radius: var(--radius-xl);
@@ -431,6 +424,14 @@
   background-color: var(--color-ticket-green);
   color: var(--color-background);
   border-radius: var(--radius-xs);
+}
+.trip-box {
+  height: 52px;
+  min-height: 52px;
+  width: 95%;
+  margin: 0.5rem;
+  border-radius: 0.75rem;
+  background-color: var(--color-deep-grey);
 }
 @property --tw-border-style {
   syntax: "*";
