--- a/tailwind/index.css
+++ b/tailwind/index.css
@@ -18,3 +18,12 @@
   color: var(--color-background);
   border-radius: var(--radius-xs);
 }
+
+.trip-box {
+  height: 52px;
+  min-height: 52px;
+  width: 95%;
+  margin: 0.5rem;
+  border-radius: 0.75rem;
+  background-color: var(--color-deep-grey);
+}
