--- a/views/cart.html
+++ b/views/cart.html
@@ -37,7 +37,7 @@
   </div>
   <!-- TEMPLATE -->
   <template id="cart-tmpl">
-    <div class="w-19/20 h-1/5 min-h-10: m-2 grid grid-cols-5 bg-deep-grey rounded-xs ">
+    <div class="trip-box m-2 grid grid-cols-5 bg-deep-grey rounded-xs ">
       <div class="h-full align-middle col-start-1 col-span-2">
         <span id="departure"></span>><span id="arrival"></span>
       </div>
