--- a/tailwind/index.css
+++ b/tailwind/index.css
@@ -17,6 +17,7 @@
   background-color: var(--color-ticket-green);
   color: var(--color-background);
   border-radius: var(--radius-xs);
+  padding: 0.5rem;
 }
 
 .trip-box {
