--- a/views/cart.html
+++ b/views/cart.html
@@ -15,6 +15,9 @@
       <h1 id="logo" class="text-ticket-green ml-5 font-extrabold text-3xl">Tickethack</h1>
     </a>
     <div class="align-middle">
+      <button class="green-button" id="log-in">
+        Log in
+      </button>
       <a class="mx-5" href="./cart.html">Cart</a>
       <a class="mx-5" href="./bookings.html">Bookings</a>
     </div>
@@ -48,7 +51,7 @@
       </div>
     </div>
   </template>
-
+  <script src="../scripts/logIn.js"></script>
   <script src="../scripts/cart.js"></script>
 </body>
 
