--- a/views/cart.html
+++ b/views/cart.html
@@ -41,12 +41,12 @@
   <!-- TEMPLATE -->
   <template id="cart-tmpl">
     <div class="trip-box m-2 grid grid-cols-5 bg-deep-grey rounded-xs ">
-      <div class="h-full align-middle col-start-1 col-span-2">
+      <div class=" my-auto col-start-1 col-span-2">
         <span id="departure"></span>><span id="arrival"></span>
       </div>
-      <div class="h-full align-middle col-start-3 text-center" id="time"></div>
-      <div class="h-full align-middle col-start-4 text-center"><span id="price"></span>€</div>
-      <div class="h-full align-middle col-start-5 text-right">
+      <div class="my-auto col-start-3 text-center" id="time"></div>
+      <div class="my-auto col-start-4 text-center"><span id="price"></span>€</div>
+      <div class="my-auto col-start-5 text-right">
         <button id="delete" class="green-button m-2">X</button>
       </div>
     </div>
